--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build and Test
 
 on: push
 
@@ -15,7 +15,7 @@ jobs:
           java-version: 11.0.2
       - name: Download and install SBT
         env:
-          SBT_VERSION: 1.3.0
+          SBT_VERSION: 1.3.2
         run: |
           curl -L -o sbt-${SBT_VERSION}.deb https://dl.bintray.com/sbt/debian/sbt-${SBT_VERSION}.deb
           sudo dpkg -i sbt-${SBT_VERSION}.deb
