--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,6 @@
-version = 2.0.0
+version = 2.3.0
 maxColumn = 100
 includeCurlyBraceInSelectChains = false
 newlines.alwaysBeforeMultilineDef = false
+continuationIndent.defnSite = 2
+continuationIndent.extendSite = 2
