--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up Scala
+        uses: olafurpg/setup-scala@v10
         with:
-          java-version: 11.0.8
-      - name: Download and install SBT
-        env:
-          SBT_VERSION: 1.4.6
-        run: |
-          curl -L -o sbt-${SBT_VERSION}.deb https://dl.bintray.com/sbt/debian/sbt-${SBT_VERSION}.deb
-          sudo dpkg -i sbt-${SBT_VERSION}.deb
+          java-version: "adopt@1.11"
       - name: Run tests
         run: sbt test
       - name: Check formatting
