Add cats effect version of FCM client; remove unsupported GCM client

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           java-version: "adopt@1.11"
       - name: Run tests
-        run: sbt test
+        run: sbt "project root" +test
       - name: Check formatting
         run: sbt "project root" scalafmtCheck
