--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,5 +2,7 @@ version = 2.7.5
 maxColumn = 100
 includeCurlyBraceInSelectChains = false
 newlines.alwaysBeforeMultilineDef = false
-continuationIndent.defnSite = 2
-continuationIndent.extendSite = 2
+continuationIndent {
+  defnSite = 2
+  extendSite = 2
+}
