Update deps including logback

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,8 +1,12 @@
-version = 2.7.5
+version = 3.6.1
+runner.dialect = scala3
 maxColumn = 100
 includeCurlyBraceInSelectChains = false
 newlines.alwaysBeforeMultilineDef = false
 continuationIndent {
   defnSite = 2
   extendSite = 2
+}
+project {
+  excludeFilters = ["build.sbt", "project/*"]
 }
