--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: '17'
-          cache: 'sbt'
+          distribution: zulu
+          java-version: 17
+          cache: sbt
       - name: Run tests
         run: sbt "project mobilePushRoot" +test
       - name: Check formatting
